--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8088
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bank_db2
-spring.datasource.username=Boss
-spring.datasource.password=Boss
+spring.datasource.url=jdbc:mysql://localhost:3306/books_db
+spring.datasource.username=audiobooks_synthesizer
+spring.datasource.password=audiobooks
 
 
 
