start add synthesizer

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,12 @@
             <scope>test</scope>
         </dependency>
       <!--  -->
-
+        <!-- https://mvnrepository.com/artifact/com.google.android/android -->
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android</artifactId>
+            <version>1.6_r2</version>
+        </dependency>
     </dependencies>
 
 
